# jones_cup_frontend

./: app.js  coaching_dashboard.html  efficiency_landscape.html  firebase.json  index.html  player_explore.html  report.html  scouting_report.html  style.css  suggestion_report.html  te.csv  test.html  test.ipynb
javascript/: app.js  scouting.js  shot_chart.js
jones_cup_api/: .gitignore  Dockerfile  README.md  pyproject.toml
jones_cup_api/.github/workflows/: deploy-to-production-on-push-tag.yml  deploy-to-stage-on-push-branche.yml
jones_cup_api/app/: main.py
jones_cup_api/app/api/: main.py
jones_cup_api/app/api/routes/: scouting.py
jones_cup_api/app/core/: config.py
jones_cup_api/app/db/bigquery/: README.md  __init__.py  client.py
jones_cup_api/app/db/firestore/: README.md  __init__.py  client.py  operations.py
jones_cup_api/app/db/gcs/: client.py
jones_cup_api/app/db/mongodb/: README.md  __init__.py  client.py
jones_cup_api/app/services/: api_client.py  scouting.py  stats_calculator.py
jones_cup_api/app/tests/: test_api.py
jones_cup_api/json/11374/: all_team_stats.json  player_stats.json
json/: all_games_data.json  all_player_stats.json  all_team_stats.json  all_team_stats2.json  player_adv_stats2.json  player_totals.json  season-squads.json  team_totals.json
json1/: all_games_data.json  all_player_stats.json  all_team_stats.json  all_team_stats2.json  player_adv_stats2.json
private/: data.ipynb  design.md  efficiency_landscape.html  main_scouting_report.html  scouting_report_up.html  shot_attempt_chart.html  test.ipynb
style/: style.css  (+1 more)
(+26 files in other folders)
